style.css
@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');

*{
    font-family: "Poppins", sans-serif;
    padding:0;
    margin:0;
}
body{
    background-color: black;
    color: white;
}
select {
    color: white;   /* closed select text */
}

select option {
    color: black;   /* dropdown list text */
}
.main{
     /* padding-top: 25px;  */
    background-image: url("../assets/images/image405.jpg");
    background-position: center center;
    background-size: max(200px,100vw);
     background-repeat: no-repeat;
    height: 644px;
    position: relative;
    overflow: hidden;
}
.main .box{
    height: 669px;
    width: 100%;
    opacity: 0.66;
    position: absolute;
    top:0;
    background-color:black;
}

nav{
    position: absolute;
    top: 25px;
    left: 50%;
     transform: translateX(-50%);
    width: 76vw;

    /* max-width: 60vw; */
    /* margin:25px auto 0 auto; */
    justify-content: space-between;
    display:flex;
    align-content:center;
    z-index: 10;
    /* height: 100px; */
}

nav img{
   color: red;
    width: 130px;
    position: relative;
    z-index: 10;
}

nav button{
    position: relative;
    z-index: 10;
}
.flex{
    display: flex;
    align-items: center;
    gap: 15px;
}
.lang-select{
    position: relative;
    display: inline-block;
}
.lang-select i{
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    color: white;
    font-size: 14px;
    pointer-events: none;
}
.lang-select select{
    font-family: "Martel Sans", sans-serif;
    font-weight: 600;

    background-color: rgba(255, 255, 255, 0.09);
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 5px;

    color: white;
    height: 32px;
    width: 118px;

    padding-left: 30px; /* space for icon */
}
.flex button{
    font-family: "Martel Sans", sans-serif;
    font-weight: 600;

    background-color: rgb(230, 9, 20);
    border-radius: 5px;
    color: white;

    border: none;
    height: 32px;
    width: 77px;
}

/* .flex> :nth-child(1){
   font-family: "Martel Sans", sans-serif;
    font-weight: 700;
    font-style: normal;
    color: rgb(255, 255, 255);
    background-color: rgba(255, 255, 255, 0.090);
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    height: 30px;
    width: 118px;
    padding-left: 30px;
    padding: top;
    padding-top: 2px;
}
.flex> :nth-child(2){
    font-family: "Martel Sans", sans-serif, "Helvetica Neue", "Segoe UI", Roboto, Ubuntu, sans-serif;
    font-weight: 600;
    font-style: normal;
    background-color: rgb(255, 255, 255);
    background-color: rgb(230, 9, 20);
    border-radius: 5px;
    color: rgb(255, 255, 255);
    text-decoration: none;
    border: none;
    height: 30px;
    width: 77px;
} */
.hero{
    font-family: "Martel Sans", sans-serif;
    height: 100%;
    display: flex;
    align-items:center;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    color: white;
    position: relative;
}

.hero> :nth-child(1) {
    font-family: 'Poppins', sans-serif;
    font-weight: bolder;
    font-size: 48px;
    text-align: center;
    margin-bottom: 20px;
    margin-top: 253px;
}

.hero> :nth-child(2) {
    font-weight: 400;
    font-size: 20px;
    text-align: center;
      margin-bottom: 30px;
}

.hero> :nth-child(3) {
    
color:rgb(255, 255, 255);
    font-weight: 400;
    font-size: 16px;
    text-align: center;
      margin-bottom: 20px;
}

#get_str_btn{
    font-family: "Martel Sans", sans-serif, "Helvetica Neue", "Segoe UI", Roboto, Ubuntu, sans-serif;
    font-weight: 900;
    font-style: normal;
    background-color: rgb(255, 255, 255);
    height: 50px;
    width: 238px;
    background-color: rgb(230, 9, 20);
    border-radius: 5px;
    color: rgb(255, 255, 255);
    text-decoration: none;
    border: none;
    font-size: 20px;
}

.mail_str input{
     font-family: "Martel Sans", sans-serif;
    font-weight: 700;
    font-style: normal;
    color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.090); 
    border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
        height: 27px;
    width: 328px;
    padding: 12px;
}
.browse{
     font-family: "Martel Sans", sans-serif;
    font-weight: 300;
    font-style: normal;
    color: rgb(255, 255, 255);
    display: flex;
    width: 80%;
    justify-content: center;
        flex-direction: column;
        margin: 20px auto 0;
}
.cards{
     flex-grow: 1;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    overflow-y: hidden;
    margin-top: px16;
    -ms-overflow-style: none;  
    scrollbar-width: none; 
    scroll-behavior: smooth;
}
.cards::-webkit-scrollbar {
    display: none;
}
.card {
 min-width:180px;
   flex-shrink: 0;
      margin: 12px 30px;
      position: relative;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  transform: scale(1.05); 
  z-index: 1;
}

.card img{
   position: relative;
  /*  z-index: 2;  Image sits on top of the number's overlap */
    width: 100%;
    border-radius: 4px;
    display: block;
}
.rank {
   position: absolute;
    bottom: 7px;
    left: -27px;
    font-size: 89px;
    font-weight: 800;
    color: #000;
    -webkit-text-stroke: 1.5px white;
    z-index: 1;
    line-height: 1;
}
.carousel-container{
    display:flex;
    align-items: center;   
    width: 100%;
    gap: 10px;
    margin-top: 20px;
    margin-bottom: 58px;
}
.handle {
    position: relative;
    z-index: 10;
        height: 109px;
    width: 23px;
     background-color: rgba(255, 255, 255, 0.1);
    border: none;
    color: white;
    font-size: 22px;
    cursor: pointer;
    transition: all 0.2s ease;
    display: flex;
    align-items: center;
    justify-content: center;
     flex-shrink: 0;

}
.handle:hover {
    background-color: rgb(60, 60, 60);
}
.left-handle {
   
    border-radius: 8px;
}

.right-handle {
   
    border-radius: 8px;
}

.more-container{
    display: flex;
    flex-direction: row;
    margin-top: 20px;
}
.more-card{
    position: relative;
    display: flex;
    flex-direction: column;
        background: linear-gradient(
        135deg,
        #1a2245 0%,
        #1f1733 50%,
        #200e17 100%
    );
   
    gap: 20px;
    margin: 0 9px;
    width: 100%;
    border-radius: 18px;
    height: 281px;
     padding: 20px;
}
.more-card span{
    color: rgba(255, 255, 255, 0.7);
}
.reason-icon{
    position: absolute;
     bottom: 10px;
    right: 10px;
}
.question{
    display: flex;
    flex-direction: column;
}
.question{
    width: 100%;
    background-color: #2e2e2e;
    margin: 7px;
    height: 44px;
    font-size: 24px;
    padding: 20px;
    justify-content: center;
}

